--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -23,13 +23,18 @@
       {{ end }}
       {{ partials.IncludeCached "social/follow.html" . }}
         
-      {{/* Language Selector: Text Links */}}
-      <div id="language-switcher" class="pl3 f6 ttu tracked">
-        <a href="#" class="lang-opt link white-90 fw6 dib mr1" data-value="all">All</a>
-        <span class="white-40">/</span>
-        <a href="#" class="lang-opt link white-50 fw3 dib mh1" data-value="en">EN</a>
-        <span class="white-40">/</span>
-        <a href="#" class="lang-opt link white-50 fw3 dib mh1" data-value="nl">NL</a>
+      {{/* Language Selector: Custom Dropdown */}}
+      <div id="lang-dropdown-container" class="relative mr3">
+        <button id="lang-dropdown-toggle" class="bn bg-transparent white-90 pointer f6 ttu tracked flex items-center focus-outline">
+          <span id="current-lang-label">All Languages</span>
+          <svg class="w1 h1 ml1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+        </button>
+        
+        <div id="lang-dropdown-menu" class="absolute right-0 top-2 mt2 bg-white black-80 shadow-4 br2 dn w4" style="z-index: 100;">
+          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="all">All Languages</a>
+          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="en">English</a>
+          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="nl">Nederlands</a>
+        </div>
       </div>
 
     </div>
