fix(ui): Remove text-shadow from dropdown menu items

--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -31,9 +31,9 @@
         </button>
         
         <div id="lang-dropdown-menu" class="absolute right-0 top-2 mt2 bg-white black-80 shadow-4 br2 dn w4" style="z-index: 100;">
-          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="all">All Languages</a>
-          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="en">English</a>
-          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="nl">Nederlands</a>
+          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="all" style="text-shadow: none;">All Languages</a>
+          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="en" style="text-shadow: none;">English</a>
+          <a href="#" class="lang-opt db pa2 link hover-bg-light-gray black-80 f6" data-value="nl" style="text-shadow: none;">Nederlands</a>
         </div>
       </div>
 
