fix(ui): Use visibility:hidden for language selector on non-home pages to prevent layout shift

--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -24,7 +24,7 @@
       {{ partials.IncludeCached "social/follow.html" . }}
         
       {{/* Language Selector: Custom Dropdown */}}
-      <div id="lang-dropdown-container" class="relative mr3{{ if .IsPage }} dn{{ end }}">
+      <div id="lang-dropdown-container" class="relative mr3" {{ if not .IsHome }}style="visibility: hidden"{{ end }}>
         <button id="lang-dropdown-toggle" class="bn bg-transparent white-90 pointer f6 ttu tracked flex items-center focus-outline">
           <span id="current-lang-label">All Languages</span>
           <svg class="w1 h1 ml1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
