--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -17,5 +17,11 @@
 nav,
 nav a,
 #current-lang-label {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    text-shadow: 2px 1px 1px rgba(0, 0, 0, 1);
+}
+
+/* Force 100% white text in header for elements with white-90 or white-80 Tachyons classes */
+.cover .white-90,
+.cover .white-80 {
+    color: white !important;
 }
